--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: test vi
         run: |
-          mkdir ~/test
+          mkdir -p ~/test
           chmod 777 ~/test
           cd ~/test
           touch tester
